tests/baselines/reference/unusedSetterInClass.errors.txt
tests/cases/compiler/unusedSetterInClass.ts(2,13): error TS6133: '_fullName' is declared but never used.


==== tests/cases/compiler/unusedSetterInClass.ts (1 errors) ====
    class Employee {
        private _fullName: string;
                ~~~~~~~~~
!!! error TS6133: '_fullName' is declared but never used.
    
        set fullName(newName: string) {
            this._fullName = newName;
        }
    }